--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="images/logo-drk.png" />
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <link rel="icon" type="image/png" href="images/logo-drk.png">
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css"> -->
     <title>Newer Company Inc.</title>
   </head>
   <body>
-    <div class="skip"><a href="">Skip to Main Content</a></div>
+    <a href = "#main" class="skip">Skip to Main Content</a>
+    <!-- <div class="skip"><a href="">Skip to Main Content</a></div> -->
     <header>
       <nav>
           <ul>
@@ -27,16 +30,16 @@
       </div>
 
       <div class="about-image" id="about">
-        <img src="images/about.jpg" alt=""/>
+        <img src="images/about.jpg" alt = "people in a meeting in sunlit room">
       </div>
-      
+
       <div class="about text-block">
         <h2>About</h2>
         <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam pulvinar euismod dolor, eu aliquam nibh efficitur vel. Phasellus sit amet velit congue, finibus nibh eu, ultricies magna. Donec eu ultrices eros. Donec sit amet metus nisi. Nulla tincidunt justo non risus aliquam, sit amet lacinia lacus commodo. Aliquam ultricies ante sed semper porta. Integer eros tortor, convallis eu ultricies malesuada, fringilla sed libero. Aenean molestie rhoncus leo eu imperdiet. Mauris eget molestie massa. Maecenas auctor sapien a arcu laoreet, et consectetur odio scelerisque. Praesent ac turpis sed neque porttitor finibus faucibus quis tortor. Morbi tempus turpis lacus, nec laoreet tellus rhoncus quis. Aliquam vitae dolor urna. In pellentesque ullamcorper turpis, commodo cursus mauris condimentum eget.</p>
       </div>
 
       <div class="method-image" id="method">
-        <img src="images/method.jpg" alt=""/>
+        <img src="images/method.jpg" alt = "woman writing in notebook with an ipad and polaroid pcitures next to her">
       </div>
 
       <div class="method text-block">
@@ -46,7 +49,7 @@
       </div>
 
       <div class="clients-image" id="clients">
-        <img src="images/clients.jpg" alt=""/>
+        <img src="images/clients.jpg" alt = "people working and talking at a cafe">
       </div>
 
       <div class="clients text-block">
@@ -55,16 +58,17 @@
       </div>
 
       <div class="contact-image" id="contact">
-        <img src="images/contact.jpg" alt =""/>
+        <img src="images/contact.jpg" alt = "person taking on the phone and smiling">
       </div>
 
       <div class="contact text-block">
+
         <h2>Contact</h2>
         <p>Etiam dolor ex, vehicula nec augue in, lobortis volutpat turpis. Pellentesque vel vestibulum metus. Nam luctus porta sapien a malesuada. Nunc porttitor imperdiet placerat. Mauris aliquam, purus nec viverra placerat, ipsum est sollicitudin ipsum, vel lacinia justo justo rutrum libero.</p>
       </div>
   </main>
     <footer>
-      <p>University of Michigan School of Information <br/>
+      <p>University of Michigan School of Information <br>
         &copy; Colleen van Lent, Drew Asselin - Web Design 2019-2020</p>
     </footer>
   </body>
